--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -45,7 +45,7 @@
 }
 
 .btn--lg {
-  padding: var(--spacing-md) var(--spacing-lg);
+  padding: var(--padding-default) var(--spacing-lg);
   font-size: 1.125rem;
   min-height: 3rem;
 }
